--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/your-energy/",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "glob": "^8.1.0",
@@ -19,6 +20,7 @@
     "izitoast": "^1.4.0",
     "modern-normalize": "^3.0.0",
     "moment": "^2.30.1",
+    "prettier": "^3.6.1",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
   },
